# easy-neovim-wm-nav

./: Cargo.toml  README.md  flake.nix
src/: aerospace.rs  direction.rs  hypr.rs  main.rs  nvim.rs  server.rs  sway.rs
