[package]
name = "easy-neovim-wm-nav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
human_regex = "0.2.3"
neovim-lib = "0.6.1"
regex = "1"
hyprland = "=0.4.0-beta.2"
swayipc = "3.0.3"
